Adding jdk11 options